--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
         <img src="img/images/parallax-1.jpg" alt="Изображения">
       </div>
       <div class="container about-service__spacing about-service__ecosystem">
-        <h2 class="h2 about-service__ecosystem_main-title" data-aos="fade-up">реализация: Экосистема</h2>
+        <h2 class="h2" data-aos="fade-up">реализация: Экосистема</h2>
         <div class="row">
           <div class="col-lg-6 col-md-12 mt-lg-5 mt-4" data-aos="fade-up">
             <div class="about-service__ecosystem_block">
@@ -261,21 +261,21 @@
           <div class="col-lg-6 col-md-12 mt-lg-5 mt-4" data-aos="fade-up">
             <div class="about-service__ecosystem_block">
               <h3 class="about-service__ecosystem_title"> фэйсбук </h3>
-              <h4 class="about-service__ecosystem_subtitle"> Второстепенная коммуникационная площадка (визитная карточка)  </h4>
+              <h4 class="about-service__ecosystem_subtitle"> Второстепенная коммуникационная площадка (визитная карточка) </h4>
               <p class="about-service__ecosystem_text"> Какую задачу решит? Вирусность контента, больше бесплатного охвата, привлечение внимание второстепенной ЦА, продажи </p>
             </div>
           </div>
           <div class="col-lg-6 col-md-12 mt-lg-5 mt-4" data-aos="fade-up">
             <div class="about-service__ecosystem_block">
               <h3 class="about-service__ecosystem_title"> вконтакте </h3>
-              <h4 class="about-service__ecosystem_subtitle"> Работа с аудиторией, которая хочет быть умнее всех. Делаем анонс распродаж, бонусов.  </h4>
+              <h4 class="about-service__ecosystem_subtitle"> Работа с аудиторией, которая хочет быть умнее всех. Делаем анонс распродаж, бонусов. </h4>
               <p class="about-service__ecosystem_text"> Какую задачу решит? Продажи, выявление потребностей, анализ поведенческих потребностей, более дешевый контакт с ЦА. </p>
             </div>
           </div>
           <div class="col-lg-6 col-md-12 mt-lg-5 mt-4" data-aos="fade-up">
             <div class="about-service__ecosystem_block">
               <h3 class="about-service__ecosystem_title"> ютуб </h3>
-              <h4 class="about-service__ecosystem_subtitle"> Поддерживающий канал бренда  </h4>
+              <h4 class="about-service__ecosystem_subtitle"> Поддерживающий канал бренда </h4>
               <p class="about-service__ecosystem_text"> Какую задачу решит? Трафик на сайт, повышение узнаваемости бренда. Замыкающий элемент в трафикообразующей системе. </p>
             </div>
           </div>
@@ -321,9 +321,38 @@
             </div>
           </div>
         </div>
+        <h2 class="h2 about-service__content_title" data-aos="fade-up">Customer Journey Map в социальных сетях</h2>
+        <div class="about-service__content_plan" data-aos="fade-up">
+          <img src="img/gallery/legal-instagram/content-plan.svg" alt="Изображения">
+        </div>
       </div>
+      <div class="container-fluid about-service__tools">
+        <div class="container">
+          <h2 class="h2 about-service__tools_title" data-aos="fade-up">Этапы разработки контент-плана и его промотирование</h2>
+          <div class="about-service__tools_list">
+            <ol>
+              <li data-aos="fade-up">Рассматривается конкретный возраст аудитории </li>
+              <li data-aos="fade-up">Выделяются проблемы</li>
+              <li data-aos="fade-up">Каждая тема расписывается на главную и второстепенную тему</li>
+              <li data-aos="fade-up">Заголовок темы адаптируется под Call-to-action</li>
+              <li data-aos="fade-up">CTA адаптируется под формат (сториз, лента, пре-ролл)</li>
+              <li data-aos="fade-up">Креатив разрабатывается в смысловой связке с темой поста.</li>
+              <li data-aos="fade-up">Запускается таргет</li>
+            </ol>
+          </div>
+          <div class="row mt-5">
+            <div class="col-lg-9 mt-lg-5">
+              <h2 class="h2 mb-lg-5" data-aos="fade-up">Инструменты вовлечения:</h2>
+              <p data-aos="fade-up">Контент-стратегия предполагает использование полностью интерактивного контента для более крепкой коммуникации с клиентом: квесты, детективы, квизы и другие игорвые механники.</p>
+            </div>
+          </div>
+          <h2 class="h2" data-aos="fade-up">Пример теста</h2>
+        </div>
+      </div>
+      <!-- Numbers Section -->
       <div class="container about-service__spacing numbers-section">
-        <div class="row">
+        <h2 class="h2 mb-5">Результат работы</h2>
+        <div class="row mt-lg-5">
           <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-4" data-aos="fade-up">
             <div class="numbers-section__card">
               <div class="numbers-section__card_title">830 000</div>
