--- a/index.html
+++ b/index.html
@@ -321,9 +321,12 @@
             </div>
           </div>
         </div>
-        <h2 class="h2 about-service__content_title" data-aos="fade-up">Customer Journey Map в социальных сетях</h2>
-        <div class="about-service__content_plan" data-aos="fade-up">
+        <h2 class="h2 about-service__content_title " data-aos="fade-up">Customer Journey Map в социальных сетях</h2>
+        <div class="about-service__content_plan d-none d-sm-block" data-aos="fade-up">
           <img src="img/gallery/legal-instagram/content-plan.svg" alt="Изображения">
+        </div>
+        <div class="about-service__content_plan d-block d-sm-none" data-aos="fade-up">
+          <img src="img/gallery/legal-instagram/mobile-content-plan.svg" alt="Изображения">
         </div>
       </div>
       <div class="container-fluid about-service__tools">
@@ -346,6 +349,10 @@
               <p data-aos="fade-up">Контент-стратегия предполагает использование полностью интерактивного контента для более крепкой коммуникации с клиентом: квесты, детективы, квизы и другие игорвые механники.</p>
             </div>
           </div>
+        </div>
+      </div>
+      <div class="container-fluid about-service__tools about-service__tools_gallery">
+        <div class="container">
           <h2 class="h2" data-aos="fade-up">Пример теста</h2>
           <div class="about-service__tools_test">
             <div class="about-service__tools_test_item"><img src="img/gallery/legal-instagram/test-1.jpg" alt="Изображения"></div>
@@ -356,44 +363,57 @@
           </div>
         </div>
       </div>
+      <div class="container-fluid about-service__tools about-service__tools_gallery about-service__tools_game">
+        <div class="container">
+          <h2 class="h2" data-aos="fade-up">Пример игровой механики на вовлечение</h2>
+          <div class="about-service__tools_test">
+            <div class="about-service__tools_test_item"><img src="img/gallery/legal-instagram/game1.jpg" alt="Изображения"></div>
+            <div class="about-service__tools_test_item"><img src="img/gallery/legal-instagram/game2.jpg" alt="Изображения"></div>
+            <div class="about-service__tools_test_item"><img src="img/gallery/legal-instagram/game3.jpg" alt="Изображения"></div>
+            <div class="about-service__tools_test_item"><img src="img/gallery/legal-instagram/game4.jpg" alt="Изображения"></div>
+            <div class="about-service__tools_test_item"><img src="img/gallery/legal-instagram/game5.jpg" alt="Изображения"></div>
+            <div class="about-service__tools_test_item"><img src="img/gallery/legal-instagram/game6.jpg" alt="Изображения"></div>
+          </div>
+        </div>
+      </div>
       <!-- Numbers Section -->
       <div class="container about-service__spacing numbers-section">
         <h2 class="h2 mb-5">Результат работы</h2>
         <div class="row mt-lg-5">
           <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-4" data-aos="fade-up">
             <div class="numbers-section__card">
-              <div class="numbers-section__card_title">830 000</div>
-              <div class="numbers-section__card_content">Органический охват людей за время проведения кампании</div>
+              <div class="numbers-section__card_title">25 дней</div>
+              <div class="numbers-section__card_content">Ушло на разработку контентной стратегии </div>
             </div>
           </div>
           <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-4" data-aos="fade-up" data-aos-delay="100">
             <div class="numbers-section__card">
-              <div class="numbers-section__card_title">611</div>
-              <div class="numbers-section__card_content">Среднее количество репостов под каждой фото</div>
+              <div class="numbers-section__card_title">30 человек</div>
+              <div class="numbers-section__card_content">С таким количеством людей провели интервью менеджеры </div>
             </div>
           </div>
           <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-4" data-aos="fade-up" data-aos-delay="200">
             <div class="numbers-section__card">
-              <div class="numbers-section__card_title">74</div>
-              <div class="numbers-section__card_content">Некоммерческих поминания в СМИ</div>
+              <div class="numbers-section__card_title">6 месяцев</div>
+              <div class="numbers-section__card_content">Минимальный срок жизни этой стратегии </div>
             </div>
           </div>
           <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-4" data-aos="fade-up" data-aos-delay="300">
             <div class="numbers-section__card">
-              <div class="numbers-section__card_title">Каждая 3</div>
-              <div class="numbers-section__card_content">Девушка писала с желанием стать моделью Хадыжей</div>
+              <div class="numbers-section__card_title">3 человека</div>
+              <div class="numbers-section__card_content">Участвовало в разработке документа </div>
             </div>
           </div>
           <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-4" data-aos="fade-up" data-aos-delay="400">
             <div class="numbers-section__card">
-              <div class="numbers-section__card_title">Кайф!</div>
-              <div class="numbers-section__card_content">Самый часты ответ на вопрос “Как вам пиво Хадыжи?”</div>
+              <div class="numbers-section__card_title">Это сериал!</div>
+              <div class="numbers-section__card_content">Самый восторженный отзыв от клиента </div>
             </div>
           </div>
           <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-4" data-aos="fade-up" data-aos-delay="500">
             <div class="numbers-section__card">
-              <div class="numbers-section__card_title">9</div>
-              <div class="numbers-section__card_content">Человек учавствовало в разработке стратегии</div>
+              <div class="numbers-section__card_title">Заказать</div>
+              <div class="numbers-section__card_content">Такую стратегию Вы можете просто заполнив наш бриф </div>
             </div>
           </div>
         </div>
