--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
       <div class="container-fluid about-service__tools about-service__tools_gallery">
         <div class="container">
           <h2 class="h2" data-aos="fade-up">Пример теста</h2>
-          <div class="about-service__tools_test">
+          <div class="about-service__tools_test" data-aos="fade-up">
             <div class="about-service__tools_test_item"><img src="img/gallery/legal-instagram/test-1.jpg" alt="Изображения"></div>
             <div class="about-service__tools_test_item"><img src="img/gallery/legal-instagram/test2.jpg" alt="Изображения"></div>
             <div class="about-service__tools_test_item"><img src="img/gallery/legal-instagram/test3.jpg" alt="Изображения"></div>
@@ -366,7 +366,7 @@
       <div class="container-fluid about-service__tools about-service__tools_gallery about-service__tools_game">
         <div class="container">
           <h2 class="h2" data-aos="fade-up">Пример игровой механики на вовлечение</h2>
-          <div class="about-service__tools_test">
+          <div class="about-service__tools_test" data-aos="fade-up">
             <div class="about-service__tools_test_item"><img src="img/gallery/legal-instagram/game1.jpg" alt="Изображения"></div>
             <div class="about-service__tools_test_item"><img src="img/gallery/legal-instagram/game2.jpg" alt="Изображения"></div>
             <div class="about-service__tools_test_item"><img src="img/gallery/legal-instagram/game3.jpg" alt="Изображения"></div>
