--- a/index.html
+++ b/index.html
@@ -179,9 +179,7 @@
           </div>
         </div>
       </div>
-      <div class="container-fluid about-service__office-img" data-aos="fade-up">
-        <img src="img/images/legal-office.jpg" alt="">
-      </div>
+      <div class="container-fluid about-service__office-img" data-aos="fade-up"> </div>
       <div class="container about-service__spacing about-service__line-height pb-5" data-aos="fade-up">
         <p class="mb-5">Проводя тестирование контента на фокус-группе, мы получили общее впечатление по существующему контенту: компании стараются выразить экспертность и принадлежность к государственным структурам, а их образы перегруженные и сложные. Контент отдален от потребителя, словно компании не пытаются помочь, а наоборот порицают его за беспечное отношение к своим правам и обязанностям. </p>
         <p class="color-red font-bold">В разработке концепции мы учли эти факторы и отстроились от остальных компаний в сторону понятного, дружелюбного образа.</p>
@@ -241,13 +239,11 @@
           </div>
         </div>
       </div>
-      <div class="container about-service__spacing about-service__parallax">
+      <div class="container about-service__spacing">
         <p class="about-service__parallax_text">Сегодня в России 20 кодексов, каждый из которых регулярно обновляется. Законы ждут граждан на каждом углу, парковке, станции метро и автобусной остановке. Эта мысль побудила нас создать яркую креативную концепцию.</p>
         <h2 class="about-service__parallax_title">Город Юристов - юридические услуги для всех и на каждом шагу</h2>
       </div>
-      <div class="container-fluid about-service__parallax px-0" data-aos="fade-up">
-        <img src="img/images/parallax-1.jpg" alt="Изображения">
-      </div>
+      <div class="container-fluid about-service__parallax px-0" data-aos="fade-up"> </div>
       <div class="container about-service__spacing about-service__ecosystem">
         <h2 class="h2" data-aos="fade-up">реализация: Экосистема</h2>
         <div class="row">
