--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             </div>
             <div data-aos="fade-up">
               <blockquote class="about-service__blockquote"> “Когда я с юристами начинаю разговаривать, то мне кажется, что они начинают просто перечислять термины из своего какого-то словаря. А мне нужно просто объяснить, что мне с документами-то делать” </blockquote>
-              <h5 class="about-service__blockquote_name">Из интерьвю с целевой группы.</h5>
+              <h5 class="about-service__blockquote_name">Из интервью с целевой группой.</h5>
             </div>
           </div>
         </div>
