--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
                     <a href="#">Услуги</a>
                   </li>
                   <li>
-                    <a href="#">агентство</a>
+                    <a href="#">Агентство</a>
                   </li>
                   <li>
                     <a href="#">Мемлог</a>
