--- a/index.html
+++ b/index.html
@@ -87,9 +87,11 @@
         <div class="first-layout__title" data-aos="fade-up" data-aos-delay="250">
           <h1>Контент-стратегия для компании <br> “Галерея Юридических Услуг”</h1>
         </div>
-        <div class="first-layout__img" data-aos="fade-up" data-aos-delay="500">
+        <video class="first-layout__video" autoplay muted loop id="myVideo">
+          <source src="img/video/header-1.mp4" type="video/mp4"> Your browser does not support HTML5 video. </video>
+        <!-- <div class="first-layout__img" data-aos="fade-up" data-aos-delay="500">
           <img src="img/images/company-legacy.svg" alt="">
-        </div>
+        </div> -->
       </div>
     </section>
     <!-- About Service -->
