--- a/index.html
+++ b/index.html
@@ -87,11 +87,8 @@
         <div class="first-layout__title" data-aos="fade-up" data-aos-delay="250">
           <h1>Контент-стратегия для компании <br> “Галерея Юридических Услуг”</h1>
         </div>
-        <video class="first-layout__video" autoplay muted loop>
+        <video onloadeddata="this.play();" class="first-layout__video" autoplay muted loop>
           <source src="img/video/header-1.mp4" type="video/mp4"> Your browser does not support HTML5 video. </video>
-        <!-- <div class="first-layout__img" data-aos="fade-up" data-aos-delay="500">
-          <img src="img/images/company-legacy.svg" alt="">
-        </div> -->
       </div>
     </section>
     <!-- About Service -->
@@ -290,37 +287,37 @@
         <div class="row">
           <div class="col-lg-4 col-md-6 col-12" data-aos="fade-up">
             <div class="about-service__content_item">
-              <video autoplay muted loop>
+              <video onloadeddata="this.play();" autoplay muted loop>
                 <source src="img/video/instagram/1.mp4" type="video/mp4"> Your browser does not support HTML5 video. </video>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-12" data-aos="fade-up">
             <div class="about-service__content_item">
-              <video autoplay muted loop>
+              <video onloadeddata="this.play();" autoplay muted loop>
                 <source src="img/video/instagram/2.mp4" type="video/mp4"> Your browser does not support HTML5 video. </video>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-12" data-aos="fade-up">
             <div class="about-service__content_item">
-              <video autoplay muted loop>
+              <video onloadeddata="this.play();" autoplay muted loop>
                 <source src="img/video/instagram/3.mp4" type="video/mp4"> Your browser does not support HTML5 video. </video>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-12" data-aos="fade-up">
             <div class="about-service__content_item">
-              <video autoplay muted loop>
+              <video onloadeddata="this.play();" autoplay muted loop>
                 <source src="img/video/instagram/4.mp4" type="video/mp4"> Your browser does not support HTML5 video. </video>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-12" data-aos="fade-up">
             <div class="about-service__content_item">
-              <video autoplay muted loop>
+              <video onloadeddata="this.play();" autoplay muted loop>
                 <source src="img/video/instagram/5.mp4" type="video/mp4"> Your browser does not support HTML5 video. </video>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-12" data-aos="fade-up">
             <div class="about-service__content_item">
-              <video autoplay muted loop>
+              <video onloadeddata="this.play();" autoplay muted loop>
                 <source src="img/video/instagram/6.mp4" type="video/mp4"> Your browser does not support HTML5 video. </video>
             </div>
           </div>
