--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
         <div class="col-xl-8 col-lg-8 d-lg-block d-none">
           <nav class="header__menu">
             <ul class="header__menu_list">
-              <li class="header__menu_item header__menu_item_active" data-aos="fade-up"><a href="#">Проекты</a></li>
+              <li class="header__menu_item" data-aos="fade-up"><a href="#">Проекты</a></li>
               <li class="header__menu_item" data-aos="fade-up"><a href="#">Услуги</a></li>
               <li class="header__menu_item" data-aos="fade-up"><a href="#">О нас</a></li>
-              <li class="header__menu_item" data-aos="fade-up"><a href="#">Мемлог</a></li>
+              <li class="header__menu_item" data-aos="fade-up"><a href="#">Медиатека</a></li>
             </ul>
           </nav>
         </div>
@@ -379,7 +379,7 @@
       </div>
       <!-- Numbers Section -->
       <div class="container about-service__spacing numbers-section">
-        <h2 class="h2 mb-5">Результат работы</h2>
+        <h2 class="h2 mb-5" data-aos="fade-up">Результат работы</h2>
         <div class="row mt-lg-5">
           <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-4" data-aos="fade-up">
             <div class="numbers-section__card">
@@ -420,12 +420,12 @@
         </div>
       </div>
       <div class="container-fluid about-service__spacing other-cases mt-5 px-0 bg-grey">
-        <div class="container" data-aos="fade-up">
-          <h2 class="other-cases__title">Другие кейсы</h2>
+        <div class="container">
+          <h2 class="other-cases__title" data-aos="fade-up">Другие кейсы</h2>
           <!-- Swiper -->
           <div class="swiper-container">
             <div class="swiper-wrapper">
-              <div class="swiper-slide">
+              <div class="swiper-slide" data-aos="fade-up">
                 <a href="#" class="other-cases__card">
                   <div class="other-cases__card_img">
                     <img src="img/slider/others-1.jpg" alt="Изображения">
@@ -434,7 +434,7 @@
                   <p class="other-cases__card_content">Какой-то текст про кейс, но более мелким шрифтом</p>
                 </a>
               </div>
-              <div class="swiper-slide">
+              <div class="swiper-slide" data-aos="fade-up">
                 <a href="#" class="other-cases__card">
                   <div class="other-cases__card_img">
                     <img src="img/slider/others-2.jpg" alt="Изображения">
@@ -443,7 +443,7 @@
                   <p class="other-cases__card_content">Какой-то текст про кейс, но более мелким шрифтом</p>
                 </a>
               </div>
-              <div class="swiper-slide">
+              <div class="swiper-slide" data-aos="fade-up">
                 <a href="#" class="other-cases__card">
                   <div class="other-cases__card_img">
                     <img src="img/slider/others-3.jpg" alt="Изображения">
@@ -452,7 +452,7 @@
                   <p class="other-cases__card_content">Какой-то текст про кейс, но более мелким шрифтом</p>
                 </a>
               </div>
-              <div class="swiper-slide">
+              <div class="swiper-slide" data-aos="fade-up">
                 <a href="#" class="other-cases__card">
                   <div class="other-cases__card_img">
                     <img src="img/slider/others-1.jpg" alt="Изображения">
@@ -473,49 +473,49 @@
       <div class="row">
         <div class="col-xl-6">
           <div class="row">
-            <div class="col-xl-4 col-lg-4 col-md-6 col-6 mb-5" data-aos="fade-up">
+            <div class="col-xl-4 col-lg-4 col-md-6 col-6 mb-5">
               <div class="footer__links">
-                <h3 class="footer__links_title">О нас</h3>
+                <h3 class="footer__links_title" data-aos="fade-up">О нас</h3>
                 <ul class="footer__links_list">
-                  <li>
+                  <li data-aos="fade-up">
                     <a href="#">Проекты</a>
                   </li>
-                  <li>
+                  <li data-aos="fade-up">
                     <a href="#">Услуги</a>
                   </li>
-                  <li>
+                  <li data-aos="fade-up">
                     <a href="#">Агентство</a>
                   </li>
-                  <li>
+                  <li data-aos="fade-up">
                     <a href="#">Мемлог</a>
                   </li>
                 </ul>
               </div>
             </div>
-            <div class="col-xl-4 col-lg-4 col-md-6 col-6 mb-5" data-aos="fade-up" data-aos-delay="100">
+            <div class="col-xl-4 col-lg-4 col-md-6 col-6 mb-5">
               <div class="footer__links">
-                <h3 class="footer__links_title">Контакты</h3>
+                <h3 class="footer__links_title" data-aos="fade-up">Контакты</h3>
                 <ul class="footer__links_list">
-                  <li>
+                  <li data-aos="fade-up">
                     <a href="#">info@tvi.agency</a>
                   </li>
-                  <li>
+                  <li data-aos="fade-up">
                     <a href="#">+7 800 240 40 55</a>
                   </li>
                 </ul>
               </div>
             </div>
-            <div class="col-xl-4 col-lg-4 col-md-12 mb-2" data-aos="fade-up" data-aos-delay="200">
+            <div class="col-xl-4 col-lg-4 col-md-12 mb-2">
               <div class="footer__links footer__social">
-                <h3 class="footer__links_title">Соцсети</h3>
+                <h3 class="footer__links_title" data-aos="fade-up">Соцсети</h3>
                 <ul class="footer__links_list">
-                  <li>
+                  <li data-aos="fade-up">
                     <a href="#">instagram</a>
                   </li>
-                  <li>
+                  <li data-aos="fade-up">
                     <a href="#">facebook</a>
                   </li>
-                  <li>
+                  <li data-aos="fade-up">
                     <a href="#">telegram-канал</a>
                   </li>
                 </ul>
@@ -523,10 +523,10 @@
             </div>
           </div>
         </div>
-        <div class="col-xl-6" data-aos="fade-up" data-aos-delay="300">
+        <div class="col-xl-6">
           <form class="footer__form" action="#">
-            <div class="footer__form_title"> Подпишись на рассылку </div>
-            <div class="footer__form_input">
+            <div class="footer__form_title" data-aos="fade-up"> Подпишись на рассылку </div>
+            <div class="footer__form_input" data-aos="fade-up">
               <label for="footer_name">Ваш email</label>
               <input id="footer_name" type="email">
               <button class="" type="submit">
