--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               </a>
             </div>
             <div class="header__burger" data-aos="fade-up">
-              <button>
+              <button class="js-menu-open">
                 <div class="hamburger_menu">
                   <div class="hamburger_menu_line hamburger_menu_line_top"></div>
                   <div class="hamburger_menu_line hamburger_menu_line_bottom"></div>
@@ -79,6 +79,28 @@
       </div>
     </div>
   </header>
+  <nav class="header__navmenu js-menu">
+    <div class="container header__navmenu_block">
+      <div class="row">
+        <div class="col-lg-6">
+          <a href="#" class="header__navmenu_title">Услуги</a>
+          <ul class="header__navmenu_list">
+            <li><a href="#">Ссылка</a></li>
+            <li><a href="#">Ссылка</a></li>
+            <li><a href="#">Ссылка</a></li>
+          </ul>
+        </div>
+        <div class="col-lg-6">
+          <a href="#" class="header__navmenu_title">О нас</a>
+          <ul class="header__navmenu_list">
+            <li><a href="#">Ссылка</a></li>
+            <li><a href="#">Ссылка</a></li>
+            <li><a href="#">Ссылка</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </nav>
   <!-- Main -->
   <main class="container-fluid p-0">
     <!-- First Layout -->
