--- a/index.html
+++ b/index.html
@@ -41,9 +41,7 @@
       <div class="row">
         <div class="col-xl-1 col-lg-1 col-md-4 col-4" data-aos="fade-up">
           <div class="header__logo">
-            <a href="#">
-              <img src="img/logo.svg" alt="">
-            </a>
+            <a href="#"> tvi </a>
           </div>
         </div>
         <div class="col-xl-8 col-lg-8 d-lg-block d-none">
